--- a/powerlifting.html
+++ b/powerlifting.html
@@ -77,7 +77,7 @@
 								<h3>Savjeti za prvo natjecanje:</h3><ul>
 									<li>nemojte brinuti o težinskoj kategoriji - prijavite se u višu</li>
 									<li>detaljno proučite pravila svih liftova i komande sudaca</li>
-									<li>snimite si izvedbe liftova na treningu i provjerite dubinu na čučnju, pauzu na bencju i lockout na deadliftu</li>
+									<li>snimite si izvedbe liftova na treningu i provjerite dubinu na čučnju, pauzu na benchu i lockout na deadliftu</li>
 									<li>na meetu ne jedite i ne pijte ništa što inače ne pijete - ne želite riskirati nemiran želudac</li>
 									<li>zabavite se!</li>
 								</ul><br/><br/>
