Added instagram links

--- a/clanovi.html
+++ b/clanovi.html
@@ -34,7 +34,7 @@
 						<ul class="icons">
 							<li><a href="https://www.facebook.com/plk.stanga" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.youtube.com/channel/UCX4ts0lLWhfWON2Z7XNJ9Aw" target="_blank" class="icon fa-youtube"><span class="label">YouTube</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://www.instagram.com/plk.stanga/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 						</ul>
 					</nav>
 
@@ -245,7 +245,7 @@
 								<ul class="icons alt">
 									<li><a href="https://www.facebook.com/plk.stanga" target="_blank" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="https://www.youtube.com/channel/UCX4ts0lLWhfWON2Z7XNJ9Aw" target="_blank" class="icon alt fa-youtube"><span class="label">Youtube</span></a></li>
-									<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.instagram.com/plk.stanga/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</section>
 						</section>
