Update popisa članova, OpenPowerlifting linkovi

--- a/clanovi.html
+++ b/clanovi.html
@@ -46,9 +46,9 @@
 								<header class="major">
 									<!--span class="date">April 25, 2017</span-->
 									<h1>Članovi</h1>
-									<p>Klub trenutno broji 18 članova od kojih je 13 natjecatelja. Osnivači su Alan Sambol (predsjednik), Krunoslav Dropučić (dopredsjednik) i Elvis Tomljenović (tajnik).</p>
+									<p>Klub trenutno broji 24 člana od kojih je 19 natjecatelja. Osnivači su Alan Sambol (predsjednik), Krunoslav Dropučić (dopredsjednik) i Elvis Tomljenović (tajnik).</p>
 								</header>
-								<p>U nastavku je popis naših aktivnih natjecatelja po redoslijedu pristupanja klubu, zajedno s njihovim najboljim podignutim kilažama na natjecanjima.</p> 
+								<p>U nastavku je popis naših aktivnih natjecatelja po redoslijedu pristupanja klubu, zajedno s linkovima na socijalne mreže i OpenPowerlifting gdje su svi njihovi rezultati.</p> 
 							</section>
 
 							<!-- Posts -->
@@ -57,150 +57,100 @@
 									<header>
 										<h2>Alan Sambol</h2>
 									</header>
-									<p>
-										S: 192.5 kg<br/>
-										B: 142.5 kg<br/>
-										D: 217.5 kg
-									</p>
 									<ul class="icons alt">
 										<li><a href="https://www.instagram.com/asambol/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/alansambol" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<h2>Krunoslav Dropučić</h2>
 									</header>
-									<p>
-										S: 170 kg<br/>
-										B: 117.5 kg<br/>
-										D: 220 kg
-									</p>
 									<ul class="icons alt">
 										<li><a href="https://www.instagram.com/kdropucic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/krunoslavdropucic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<h2>Stjepan Balog</h2>
 									</header>
-									<p>
-										S: 140 kg<br/>
-										B: 112.5 kg<br/>
-										D: 180 kg
-									</p>
 									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/stjepan.blg/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/stjepanbalog" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<h2>Dario Žinić</h2>
 									</header>
-									<p>
-										B: 162.5 kg
-									</p>
 									<ul class="icons alt">
 										<li><a href="https://www.instagram.com/dario_zinic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://www.youtube.com/user/DandRFitnessCro" target="_blank" class="icon alt fa-youtube"><span class="label">YouTube</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Jakov Jukić</h2>
-									</header>
-									<p>
-										B: 145 kg
-									</p>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/jakovgram/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/dariozinic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<h2>Vinko Barić</h2>
 									</header>
-									<p>
-										S: 270 kg<br/>
-										B: 180 kg<br/>
-										D: 307.5 kg
-									</p>
 									<ul class="icons alt">
 										<li><a href="https://www.instagram.com/vinkobaric/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/vinkobaric" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>																
 								<article>
 									<header>
 										<h2>Ivana Pitteroff</h2>
 									</header>
-									<p>
-										S: 85 kg<br/>
-										B: 52.5 kg<br/>
-										D: 100 kg
-									</p>
 									<ul class="icons alt">
 										<li><a href="https://www.instagram.com/andvana_pitt/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/ivanapitteroff" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<h2>Ivan Matovinović</h2>
 									</header>
-									<p>
-										S: 180 kg<br/>
-										B: 130 kg<br/>
-										D: 225 kg
-									</p>
 									<ul class="icons alt">
 										<li><a href="https://www.instagram.com/ivan.matovinovic1/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/ivanmatovinovic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<h2>Hrvoje Motik</h2>
 									</header>
-									<p>
-										S: 185 kg<br/>
-										B: 127.5 kg<br/>
-										D: 232.5 kg
-									</p>
 									<ul class="icons alt">
 										<li><a href="https://www.instagram.com/hrvojemotik/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/hrvojemotik" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
-								</article>																							
+								</article>			
 								<article>
 									<header>
 										<h2>Borna Čanić</h2>
 									</header>
-									<p>
-										S: 165 kg<br/>
-										B: 122.5 kg<br/>
-										D: 200 kg
-									</p>
 									<ul class="icons alt">
 										<li><a href="https://www.instagram.com/bornacanic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/bornacanic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<h2>Sara Šobak</h2>
 									</header>
-									<p>
-										B: 65 kg
-									</p>
 									<ul class="icons alt">
 										<li><a href="https://www.instagram.com/bulk_kitty/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/sarasobak" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
 										<h2>Ivana Ferhatbegović</h2>
 									</header>
-									<p>
-										S: 140 kg<br/>
-										B: 55 kg<br/>
-										D: 170 kg
-									</p>
 									<ul class="icons alt">
 										<li><a href="https://www.instagram.com/iivanchicaa/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/ivanaferhatbegovic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
@@ -208,17 +158,66 @@
 										<h2>Hrvoje Lovrić</h2>
 									</header>
 									<ul class="icons alt">
+										<li><a href="https://www.openpowerlifting.org/u/hrvojelovric" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
-									<p>
-										B: 85 kg
-									</p>
+								</article>
+								<article>
+									<header>
+										<h2>Luka Vučina</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/luka_2204_/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/lukavucina" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Filip Jambrešić</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/filipjambresic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/filipjambresic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Tomislav Novak</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.openpowerlifting.org/u/tomislavnovak" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Sven Šćekić</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/sven.scekic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/svenscekic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Nino Gospočić</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/ninogospocic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/ninogospocic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>	
+								<article>
+									<header>
+										<h2>Zvonimir Josip Strinić</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/zjstrinic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/zvonimirjosipstrinic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
 								</article>
 								<article>
 								</article>
 								<article>
 								</article>
-								<article>
-								</article>																																		
 							</section>
 					</div>
 
