--- a/clanovi.html
+++ b/clanovi.html
@@ -119,6 +119,15 @@
 								</article>
 								<article>
 									<header>
+										<h2>Karlo Gudelj</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/gugo_sugo/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/karlogudelj" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>								
+								<article>
+									<header>
 										<h2>Hrvoje Motik</h2>
 									</header>
 									<ul class="icons alt">
@@ -213,8 +222,6 @@
 										<li><a href="https://www.instagram.com/zjstrinic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://www.openpowerlifting.org/u/zvonimirjosipstrinic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
-								</article>
-								<article>
 								</article>
 								<article>
 								</article>
