Update članova, pravila, detalji oko liječničkog

--- a/clanovi.html
+++ b/clanovi.html
@@ -46,7 +46,7 @@
 								<header class="major">
 									<!--span class="date">April 25, 2017</span-->
 									<h1>Članovi</h1>
-									<p>Klub trenutno broji 24 člana od kojih je 19 natjecatelja. Osnivači su Alan Sambol (predsjednik), Krunoslav Dropučić (dopredsjednik) i Elvis Tomljenović (tajnik).</p>
+									<p>Klub trenutno broji 32 člana od kojih je 26 natjecatelja. Osnivači su Alan Sambol (predsjednik), Krunoslav Dropučić (dopredsjednik) i Elvis Tomljenović (tajnik).</p>
 								</header>
 								<p>U nastavku je popis naših aktivnih natjecatelja po redoslijedu pristupanja klubu, zajedno s linkovima na socijalne mreže i OpenPowerlifting gdje su svi njihovi rezultati.</p> 
 							</section>
@@ -222,6 +222,70 @@
 										<li><a href="https://www.instagram.com/zjstrinic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://www.openpowerlifting.org/u/zvonimirjosipstrinic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Matej Martinović</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/matejsovi/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/matejmartinovic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Ian Petrović</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/ianpetrovic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/ianpetrovic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Robert Bunjan</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/robertbunjan/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/robertbunjan" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Karlo Kovač</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.openpowerlifting.org/u/karlokovac" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Borna Kraljević</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/bornakraljevic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/bornakraljevic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Mario Gabud</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/gabudizator_conditioning/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/mariogabud" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Bruno Šimunović</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/bruno.simunovic2701/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/brunosimunovic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
 								</article>
 								<article>
 								</article>
