--- a/powerlifting.html
+++ b/powerlifting.html
@@ -62,9 +62,9 @@
 								<header class="major">
 									<span class="date"><h3>Oprema</h3></span>
 								</header>
-								<p><b>Obavezna oprema</b>: pamučna majica (osim na deadliftu), visoke čarape (samo na deadliftu), tenisice, triko<br/>
-								<b>Dozvoljena oprema</b>: Pojas (max. 13mm debljine i 10cm širine), steznici za koljena, zavoji za zapešća
-								- zavoji za koljena, steznici za laktove nisu dozvoljeni.</p><br/><br/>
+								<p><b>Obavezna oprema</b>: pamučna majica, visoke čarape (samo na deadliftu), tenisice, triko<br/>
+								<b>Dozvoljena oprema</b>: Pojas (max. 13mm debljine i 10cm širine), steznici za koljena, zavoji za zapešća<br/>
+								<b>Nedozvoljena oprema</b>: Zavoji za koljena, steznici za laktove</p><br/><br/>
 								<header class="major">
 									<span class="date"><h3>Prvo natjecanje</h3></span>
 									<p>"Jesam li dovoljno jak(a) za svoje prvo natjecanje?"</p>
@@ -121,7 +121,7 @@
 								<header class="major">
 									<span class="date"><h3>Kotizacije</h3></span>
 								</header>
-								<p>Cijene kotizacija za natjecanja u Hrvatskoj su: 250kn powerlifting, 200kn bench press, 350kn powerlifting + bench press. Trošak kotizacije snosi natjecatelj.</p>
+								<p>Cijene kotizacija za natjecanja u Hrvatskoj su: 250kn powerlifting, 200kn bench press, 400kn powerlifting + bench press. Trošak kotizacije snosi natjecatelj.</p>
 							</section>
 					</div>
 
