--- a/clanovi.html
+++ b/clanovi.html
@@ -297,8 +297,7 @@
 						<section>
 							<a href="https://www.powerlifting-ipf.com/" target="_blank"><h3>International Powerlifting Federation<br/><img src="images/ipf_logo.png" alt="IPF" /></a><h3><br/>
 							<a href="http://www.europowerlifting.org/" target="_blank"><h3>European Powerlifting Federation<br/><img src="images/epf_logo.jpg" alt="EPF" /> </a><h3><br/>
-							<a href="http://www.hpls-powerlifting.hr/" target="_blank"><h3>Hrvatski Powerlifting Savez<br/><img src="images/hpls_logo.jpg" alt="HPLS" /> </a><h3><br/>
-							<a href="https://www.facebook.com/powerbuilding.hr" target="_blank"><h3>Powerbuilding.hr<br/><img src="images/powerbuilding_logo.png" alt="powerbuilding.hr" /> </a><h3>
+							<a href="http://www.hpls-powerlifting.hr/" target="_blank"><h3>Hrvatski Powerlifting Savez<br/><img src="images/hpls_logo.jpg" alt="HPLS" /> </a><h3>
 						</section>
 						<section class="split contact">
 							<!--section class="alt">
