--- a/clanovi.html
+++ b/clanovi.html
@@ -46,7 +46,7 @@
 								<header class="major">
 									<!--span class="date">April 25, 2017</span-->
 									<h1>Članovi</h1>
-									<p>Klub trenutno broji 32 člana od kojih je 26 natjecatelja. Osnivači su Alan Sambol (predsjednik), Krunoslav Dropučić (dopredsjednik) i Elvis Tomljenović (tajnik).</p>
+									<p>Klub trenutno broji preko 30 članova od kojih su većina natjecatelji. Osnivači su Alan Sambol (predsjednik), Krunoslav Dropučić (dopredsjednik) i Elvis Tomljenović (tajnik). Glavni trener kluba je Stjepan Balog, jedan od certificiranih nacionalnih IPF trenera powerliftinga.</p>
 								</header>
 								<p>U nastavku je popis naših aktivnih natjecatelja po redoslijedu pristupanja klubu, zajedno s linkovima na socijalne mreže i OpenPowerlifting gdje su svi njihovi rezultati.</p> 
 							</section>
@@ -78,16 +78,6 @@
 									<ul class="icons alt">
 										<li><a href="https://www.instagram.com/stjepan.blg/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://www.openpowerlifting.org/u/stjepanbalog" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2>Dario Žinić</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/dario_zinic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.youtube.com/user/DandRFitnessCro" target="_blank" class="icon alt fa-youtube"><span class="label">YouTube</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/dariozinic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
@@ -135,15 +125,6 @@
 										<li><a href="https://www.openpowerlifting.org/u/hrvojemotik" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>			
-								<article>
-									<header>
-										<h2>Borna Čanić</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/bornacanic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/bornacanic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
 								<article>
 									<header>
 										<h2>Sara Šobak</h2>
@@ -198,15 +179,6 @@
 								</article>
 								<article>
 									<header>
-										<h2>Sven Šćekić</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/sven.scekic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/svenscekic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
 										<h2>Nino Gospočić</h2>
 									</header>
 									<ul class="icons alt">
@@ -221,6 +193,15 @@
 									<ul class="icons alt">
 										<li><a href="https://www.instagram.com/zjstrinic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://www.openpowerlifting.org/u/zvonimirjosipstrinic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Victorio Knižek</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/viki.knizek/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/victorioknizek" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
 								<article>
@@ -260,15 +241,6 @@
 								</article>
 								<article>
 									<header>
-										<h2>Borna Kraljević</h2>
-									</header>
-									<ul class="icons alt">
-										<li><a href="https://www.instagram.com/bornakraljevic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://www.openpowerlifting.org/u/bornakraljevic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
 										<h2>Mario Gabud</h2>
 									</header>
 									<ul class="icons alt">
@@ -286,8 +258,81 @@
 									</ul>
 								</article>
 								<article>
+									<header>
+										<h2>Vid Števinović</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.openpowerlifting.org/u/vidstevinovic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
 								</article>
 								<article>
+									<header>
+										<h2>Tin Hanžić</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.openpowerlifting.org/u/tinhanzic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Dario Sorić</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/dariosoric.sore/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/dariosoric" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Jelena Ivančić</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/jelena.ivancic23/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/jelenaivancic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Bepo Pedisić</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/bepopedisic/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/bepopedisic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Tomislav Gelo</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.openpowerlifting.org/u/tomislavgelo" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Nikola Huljina</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/n.huljina/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/nikolahuljina" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Sanja Mervcich</h2>
+									</header>
+									<ul class="icons alt">
+										<li><a href="https://www.instagram.com/m_saniam/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.openpowerlifting.org/u/sanjamervcich" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2>Noa Zvonimir Paić</h2>
+									</header>
+									<ul class="icons alt">										
+										<li><a href="https://www.openpowerlifting.org/u/noazvonimirpaic" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
+									</ul>
 								</article>
 							</section>
 					</div>
