--- a/powerlifting.html
+++ b/powerlifting.html
@@ -121,7 +121,7 @@
 								<header class="major">
 									<span class="date"><h3>Kotizacije</h3></span>
 								</header>
-								<p>Cijene kotizacija za natjecanja u Hrvatskoj su: 250kn powerlifting, 200kn bench press, 400kn powerlifting + bench press. Trošak kotizacije snosi natjecatelj.</p>
+								<p>Cijene kotizacija za natjecanja u Hrvatskoj su od 200 do 250kn za powerlifting ili bench press, ovisno o natjecanju. Trošak kotizacije snosi natjecatelj.</p>
 							</section>
 					</div>
 
