--- a/clanovi.html
+++ b/clanovi.html
@@ -109,7 +109,7 @@
 								</article>
 								<article>
 									<header>
-										<h2>Karlo Gudelj</h2>
+										<h2>Karlo Heisinger</h2>
 									</header>
 									<ul class="icons alt">
 										<li><a href="https://www.instagram.com/gugo_sugo/?hl=en" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
