--- a/gym.html
+++ b/gym.html
@@ -61,6 +61,7 @@
 								<p>Termini treninga su po dogovoru, a uglavnom treniramo u grupama od 3 do 6 ljudi. Imamo i opciju pojedinačnog (drop-in) treninga uz simboličnu donaciju te prethodnu najavu i dogovor oko termina.</p>
 								<p>Adresa je Rudeška cesta 92:<br/>
 								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d173.85215082641017!2d15.919525908501111!3d45.79855146322995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d14b81a70f53%3A0x3ca43e1511177f23!2sRude%C5%A1ka%20cesta%2092%2C%2010000%2C%20Zagreb!5e0!3m2!1sen!2shr!4v1633466751343!5m2!1sen!2shr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></p>
+								<div class="image main"><img src="images/gym-0.jpg" alt="" /></div>
 								<p><ul><b>Cjenik:</b>
 								<li>Mjesečna članarina - 300 kn</li>
 								<li>Polumjesečna članarina (6 dolazaka) - 150 kn</li>
