--- a/gym.html
+++ b/gym.html
@@ -60,11 +60,15 @@
 									<h2><a href="#">Štanga gym</a></h2>
 								</header>
 								<p>PLK Štanga ima svoj prostor za treninge, opremljen vrhunskom powerlifting opremom kakvu ćete teško naći na ovim prostorima:
-								<ul><li>Rogue combo rack</li>
-								<li>ELUIR combo rack</li>
-								<li>3x Rogue Ohio power bar</li>
+								<ul><li>Rogue Combo Rack</li>
+								<li>ELUIR Combo Rack</li>
+								<li>3x Rogue Ohio Power Bar</li>
+								<li>1x Strength Shop Bastard Power Bar</li>
+								<li>1x Strength Shop Riot Olympic Safety Squat Bar</li>
+								<li>1x Strength Shop Riot EZ Curl Bar</li>
+								<li>2x Strength Shop Riot Heavy Duty Loadable Dumbbell</li>
 								<li>~800kg Rogue powerlifting utega</li>
-								<li>Rogue Echo bike</li></ul>
+								<li>Rogue Echo Bike</li></ul>
 								<div class="image main"><img src="images/gym-1.jpg" alt="" /></div>
 								</p>
 								<p>Vrata su otvorena za sve članove IPF klubova, ali i za rekreativce koji su zainteresirani za ozbiljan trening fokusiran na jakost.</p>
@@ -73,9 +77,9 @@
 								<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d173.85215082641017!2d15.919525908501111!3d45.79855146322995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d14b81a70f53%3A0x3ca43e1511177f23!2sRude%C5%A1ka%20cesta%2092%2C%2010000%2C%20Zagreb!5e0!3m2!1sen!2shr!4v1633466751343!5m2!1sen!2shr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></p>
 								<div class="image main"><img src="images/gym-0.jpg" alt="" /></div>
 								<p><ul><b>Cjenik:</b>
-								<li>Mjesečna članarina - 300 kn</li>
-								<li>Polumjesečna članarina (6 dolazaka) - 150 kn</li>
-								<li>Drop-in (pojedinačni dolazak) - 30 kn</li></ul>
+								<li>Mjesečna članarina - 340 kn (45 €)</li>
+								<li>Polumjesečna članarina (6 dolazaka) - 190 kn (25 €)</li>
+								<li>Drop-in (pojedinačni dolazak) - 50 kn (7 €) / 30 kn (4 €) za članove kluba</li></ul>
 								Ako ste zainteresirani za učlanjenje, javite nam se na društvenim mrežama ili preko e-maila. Više informacija o učlanjenju u klub možete saznati <a href="uclanjenje.html">ovdje</a>.
 								<div class="image main"><img src="images/gym-2.jpg" alt="" /></div>
 								</p>
