--- a/gym.html
+++ b/gym.html
@@ -82,6 +82,22 @@
 								<li>Drop-in (pojedinačni dolazak) - 50 kn (7 €) / 30 kn (4 €) za članove kluba</li></ul>
 								Ako ste zainteresirani za učlanjenje, javite nam se na društvenim mrežama ili preko e-maila. Više informacija o učlanjenju u klub možete saznati <a href="uclanjenje.html">ovdje</a>.
 								<div class="image main"><img src="images/gym-2.jpg" alt="" /></div>
+								<p><ul><b>Detaljne fotke prostora:</b>
+								<li>Dvorana za vježbanje</li>
+								<div class="image main"><img src="images/gym_new-2.jpg" alt="" /></div>
+								<div class="image main"><img src="images/gym_new-0.jpg" alt="" /></div>
+								<div class="image main"><img src="images/gym_new-1.jpg" alt="" /></div>
+								<div class="image main"><img src="images/gym_new-3.jpg" alt="" /></div>
+								<li>Hodnik s rekvizitima za vježbanje</li>
+								<div class="image main"><img src="images/gym_new-4.jpg" alt="" /></div>
+								<li>Garderoba s policama za osobnu opremu</li>
+								<div class="image main"><img src="images/gym_new-5.jpg" alt="" /></div>
+								<li>Kupaonica</li>
+								<div class="image main"><img src="images/gym_new-6.jpg" alt="" /></div>
+								<li>Ulazni prostor za obuću i bicikle</li>
+								<div class="image main"><img src="images/gym_new-7.jpg" alt="" /></div>
+								<li>Terasa za odmor i sušenje sleevesa</li>
+								<div class="image main"><img src="images/gym_new-8.jpg" alt="" /></div>
 								</p>
 							</article>
 					</div>
