--- a/clanovi.html
+++ b/clanovi.html
@@ -331,6 +331,9 @@
 								<article>
 									
 								</article>
+								<article>
+									
+								</article>
 							</section>
 					</div>
 
