--- a/clanovi.html
+++ b/clanovi.html
@@ -192,6 +192,7 @@
 										<h2>Tea Schmidichen</h2>
 									</header>
 									<ul class="icons alt">										
+										<li><a href="https://www.instagram.com/schmidi_79/" target="_blank" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="https://www.openpowerlifting.org/u/teaschmidichen" target="_blank" class="icon alt fa-trophy"><span class="label">OpenPowerlifting</span></a></li>
 									</ul>
 								</article>
