--- a/gym.html
+++ b/gym.html
@@ -59,16 +59,24 @@
 									<!--span class="date">April 25, 2017</span-->
 									<h2><a href="#">Štanga gym</a></h2>
 								</header>
-								<p>PLK Štanga ima svoj prostor za treninge, opremljen vrhunskom powerlifting opremom kakvu ćete teško naći na ovim prostorima:
-								<ul><li>Rogue Combo Rack</li>
-								<li>ELUIR Combo Rack</li>
+								<p>PLK Štanga ima svoj prostor za treninge na 2 kata, opremljen vrhunskom powerlifting opremom kakvu ćete teško naći na ovim prostorima:
+								<ul><li>Rogue Combo Rack (fat pad)</li>
+								<li>Rogue Combo Rack</li>
+								<li>ATX Combo Rack</li>
 								<li>3x Rogue Ohio Power Bar</li>
+								<li>1x ATX Gold Power Bar</li>
 								<li>1x Strength Shop Bastard Power Bar</li>
+								<li>2x ATX competition collars</li>
 								<li>1x Strength Shop Riot Olympic Safety Squat Bar</li>
 								<li>1x Strength Shop Riot EZ Curl Bar</li>
 								<li>2x Strength Shop Riot Heavy Duty Loadable Dumbbell</li>
 								<li>~800kg Rogue powerlifting utega</li>
-								<li>Rogue Echo Bike</li></ul>
+								<li>~300kg ATX powerlifting utega</li>
+								<li>Rogue Rhino Belt squat + Monster Rack</li>
+								<li>Rogue Echo Bike</li>
+								<li>Hex dumbbells 10-40kg</li>
+								<li>Incline bench</li>
+								</ul>
 								<div class="image main"><img src="images/gym-1.jpg" alt="" /></div>
 								</p>
 								<p>Vrata su otvorena za sve članove IPF klubova, ali i za rekreativce koji su zainteresirani za ozbiljan trening fokusiran na jakost.</p>
